Prevent column headers from wrapping in list view.
git-svn-id: svn+ssh://svn.osafoundation.org/svn/server/cosmo/trunk@4934 5fd0b11a-f2f7-0310-948e-c8f80ebed640

--- a/cosmo/src/main/webapp/templates/default/ui.css
+++ b/cosmo/src/main/webapp/templates/default/ui.css
@@ -583,6 +583,7 @@ td.dataDisplayLabel {
     border-right: 1px solid #ddd;
     background-image: url(images/day_col_header_background.gif);
     cursor: pointer;
+    white-space: nowrap;
 }
 .listViewDataCell {
     cursor: pointer;
